--- a/Source/Chronozoom.UI/cz.html
+++ b/Source/Chronozoom.UI/cz.html
@@ -189,7 +189,7 @@
 </head>
 <body>
     <header>
-        <div class="fleft navigation header-logo" title="View Home Screen"></div>
+        <div class="fleft navigation header-logo"></div>
         <div class="fleft navigation header-regimes">
             <ul>
                 <li class="fleft">
@@ -226,12 +226,10 @@
                 </ul>
             </li>
             -->
-            <li id="mnuView" class="active">View
-                <ul>
-                    <li id="mnuViewTours">Guided Tours</li>
-                    <li id="mnuViewSeries" title="Time Series Charts">Time Series</li>
-                </ul>
-            </li>
+            <li id="mnuViewHome" title="View Home Screen"> Home </li>
+            <li id="mnuViewTours">View Guided Tours</li>
+            <li id="mnuViewSeries" title="Time Series Charts">View Time Series</li>
+
             <li id="mnuCurate" class="active">Create
                 <ul>
                     <li id="mnuCreateCollection">Create Collection</li>
@@ -245,8 +243,8 @@
                 </ul>
             </li>
             <li id="mnuMine">My Collections</li>
-            <li id="mnuSearch"  title="Search ChronoZoom" ><img src="/images/search-icon.png"  alt="" /></li>
-            <li id="mnuProfile" title="Register / Sign In"><img src="/images/profile-icon.png" alt="" /></li>
+            <li id="mnuSearch"  title="Search ChronoZoom" > Search collections <img src="/images/search-icon.png"  alt="" /></li>
+            <li id="mnuProfile" title="Register / Sign In"> Login <img src="/images/profile-icon.png" alt="" /></li>
         </ul>
         <div id="mnuFile">
             <input id="mnuFileJSON" type="file" accept=".json,application/json" value="" />
