added logo's of fontys and axiell with the hyperlink to the websites

--- a/Source/Chronozoom.UI/cz.html
+++ b/Source/Chronozoom.UI/cz.html
@@ -349,6 +349,16 @@
                         <img src="/images/credits/github.png" border="0" />
                     </a>
                 </li>
+                <li class="fleft">
+                    <a class="footer-link-credits elements-kiosk-disable" target="_blank" href="http://fontys.edu/Bachelors-masters/Bachelors/Information-Communication-Technology/Bachelor-ICT-Software.htm">
+                        <img src="/images/credits/Fontys-University-Of-Applied-Sciences-logo.png" border="0" />
+                    </a>
+                </li>
+                <li class="fleft">
+                    <a class="footer-link-credits elements-kiosk-disable" target="_blank" href="http://www.axiell-alm.com/">
+                        <img src="/images/credits/axiell-logo.png" border="0" />
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="fright navigation footer-links elements-kiosk-hide">
