Added the become a developer button and changed the help button to help documentation

--- a/Source/Chronozoom.UI/cz.html
+++ b/Source/Chronozoom.UI/cz.html
@@ -362,6 +362,9 @@
         <div class="fright navigation footer-links elements-kiosk-hide">
             <ul>
                 <li class="fright">
+                    <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki/Project_How-to-Contribute">Become a Developers</a>
+                </li> <!-- the url of becoming a developer has to change in the future when there is a seperatate site for becoming a dev -->
+                <li class="fright">
                     <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki/Project_How-to-Contribute">Developers</a>
                 </li>
                 <li class="fright">
@@ -371,7 +374,7 @@
                     <a class="footer-link" id="maillist"   href="mailto:mail@list?subject=Feedback">Feedback</a>
                 </li>
                 <li class="fright">
-                    <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki">Help</a>
+                    <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki">Help documentation</a>
                 </li>
             </ul>
         </div>
