fixed the bottom nav positions

--- a/Source/Chronozoom.UI/cz.html
+++ b/Source/Chronozoom.UI/cz.html
@@ -362,7 +362,7 @@
         <div class="fright navigation footer-links elements-kiosk-hide">
             <ul>
                 <li class="fright">
-                    <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki/Project_How-to-Contribute">Become a Developers</a>
+                    <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki/Project_How-to-Contribute">Become a Developer</a>
                 </li> <!-- the url of becoming a developer has to change in the future when there is a seperatate site for becoming a dev -->
                 <li class="fright">
                     <a class="footer-link" target="_blank" href="https://github.com/alterm4nn/ChronoZoom/wiki/Project_How-to-Contribute">Developers</a>
